--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -1,17 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  username: 
+  password: MyString
+  email: 
   address: one
   iban: MyString
-  username: MyString
-  password: MyString
   accountable: one
   accountable_type: Accountable
 
 two:
+  username: 
+  password: MyString
+  email: 
   address: two
   iban: MyString
-  username: MyString
-  password: MyString
   accountable: two
   accountable_type: Accountable
